# httpcli

./: README.md  pyproject.toml
httpcli/: configuration.py  console.py  did_you_mean.py  helpers.py  http.py  https.py  main.py  models.py  options.py  parameters.py  types.py
httpcli/commands/: completion.py  download.py  helpers.py  read_commands.py  sse.py  write_commands.py
tests/: conftest.py  helpers.py  test_config.py  test_configuration.py  test_default_command_behaviour.py  test_did_you_mean.py  test_helpers.py  test_options.py  test_parameters.py  test_root_cli_options.py
tests/commands/: test_completion.py  test_download.py  test_helpers.py  test_read_commands.py  test_sse.py  test_write_commands.py
