[tool.poetry]
name = "httpcli"
version = "0.1.0"
description = "A simple HTTP CLI"
authors = ["le_woudar <kevin.tewouda@gandi.net>"]
license = "MIT"

packages = [
    { include = "httpcli" }
]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.7.0"
asyncclick = "^8.0.1"
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
httpx = "^0.19.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
starlette = "^0.16.0"
pytest = "^6.2.4"
pytest-trio = "^0.7.0"
flake8 = "^3.9.2"
bandit = "^1.7.0"
respx = "^0.17.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
http = "httpcli.main:http"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=httpcli --cov-report html --cov-report xml"
trio_mode = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
